--- a/todoList_/todoList_/View/Base.lproj/Main.storyboard
+++ b/todoList_/todoList_/View/Base.lproj/Main.storyboard
@@ -19,11 +19,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" distribution="equalSpacing" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="4t7-OW-8U8">
-                                <rect key="frame" x="10" y="170" width="191.66666666666666" height="34.333333333333343"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="4t7-OW-8U8">
+                                <rect key="frame" x="10" y="155" width="373" height="60"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Jv-LY-fsx" userLabel="backDate">
-                                        <rect key="frame" x="0.0" y="0.0" width="49.666666666666664" height="34.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="49.666666666666664" height="60"/>
                                         <color key="tintColor" systemColor="scrollViewTexturedBackgroundColor"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain">
@@ -34,13 +34,13 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="24.03.18" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zgK-wQ-neZ">
-                                        <rect key="frame" x="57.666666666666664" y="0.0" width="76.333333333333343" height="34.333333333333336"/>
+                                        <rect key="frame" x="148.33333333333334" y="0.0" width="76.333333333333343" height="60"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vPS-hu-Nbz" userLabel="frontDate">
-                                        <rect key="frame" x="142" y="0.0" width="49.666666666666657" height="34.333333333333336"/>
+                                        <rect key="frame" x="323.33333333333331" y="0.0" width="49.666666666666686" height="60"/>
                                         <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain">
@@ -51,10 +51,12 @@
                                         </connections>
                                     </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="VlB-Gc-2Sj"/>
+                                </constraints>
                             </stackView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="h3J-Wx-g5X">
-                                <rect key="frame" x="10" y="210" width="373" height="559"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="h3J-Wx-g5X">
+                                <rect key="frame" x="10" y="225" width="373" height="544"/>
                                 <color key="backgroundColor" red="0.96078431610000004" green="0.96078431610000004" blue="0.96078431610000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <color key="tintColor" name="AccentColor"/>
                                 <color key="separatorColor" red="0.96078431610000004" green="0.96078431610000004" blue="0.96078431610000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -115,6 +117,15 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Fkf-ab-2zl"/>
                         <color key="backgroundColor" red="0.96078431610000004" green="0.96078431610000004" blue="0.96078431610000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="4t7-OW-8U8" firstAttribute="leading" secondItem="Fkf-ab-2zl" secondAttribute="leading" constant="10" id="6UL-Lu-VkO"/>
+                            <constraint firstItem="4t7-OW-8U8" firstAttribute="top" secondItem="Fkf-ab-2zl" secondAttribute="top" id="8Kg-qR-lwv"/>
+                            <constraint firstItem="h3J-Wx-g5X" firstAttribute="bottom" secondItem="Fkf-ab-2zl" secondAttribute="bottom" id="GZj-md-9Sv"/>
+                            <constraint firstItem="Fkf-ab-2zl" firstAttribute="trailing" secondItem="h3J-Wx-g5X" secondAttribute="trailing" constant="10" id="ciY-Wk-RkX"/>
+                            <constraint firstItem="h3J-Wx-g5X" firstAttribute="top" secondItem="4t7-OW-8U8" secondAttribute="bottom" constant="10" id="o8p-yJ-wMO"/>
+                            <constraint firstItem="h3J-Wx-g5X" firstAttribute="leading" secondItem="Fkf-ab-2zl" secondAttribute="leading" constant="10" id="oUJ-7b-aTg"/>
+                            <constraint firstItem="Fkf-ab-2zl" firstAttribute="trailing" secondItem="4t7-OW-8U8" secondAttribute="trailing" constant="10" id="q65-Kg-gKE"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Todo" id="aAs-rc-ZWP">
                         <imageReference key="image" image="list.bullet" catalog="system" symbolScale="large" renderingMode="hierarchical">
